[gd_scene load_steps=4 format=2]

[ext_resource path="res://Scenes/Player.gd" type="Script" id=1]
[ext_resource path="res://Scenes/Controller.tscn" type="PackedScene" id=2]

[sub_resource type="CapsuleShape" id=1]
radius = 0.290108
height = 0.537937

[node name="Player" type="KinematicBody"]
collision_layer = 17
collision_mask = 17
script = ExtResource( 1 )

[node name="PlayerContainer" type="Spatial" parent="."]

[node name="ARVROrigin" type="ARVROrigin" parent="PlayerContainer"]

[node name="ARVRCamera" type="ARVRCamera" parent="PlayerContainer/ARVROrigin"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1.79331, 0 )
far = 1239.2

[node name="LeftController" parent="PlayerContainer/ARVROrigin" instance=ExtResource( 2 )]
transform = Transform( 1, 0, 0, 0, 0.849837, -0.527045, 0, 0.527045, 0.849837, -0.514847, 1.05273, 0 )

[node name="RightController" parent="PlayerContainer/ARVROrigin" instance=ExtResource( 2 )]
transform = Transform( 1, 0, 0, 0, 0.849837, -0.527045, 0, 0.527045, 0.849837, 0.58631, 1.05273, 0 )
controller_id = 2

[node name="PlayerCollider" type="CollisionShape" parent="."]
transform = Transform( 1, 0, 0, 0, -4.37114e-08, -1, 0, 1, -4.37114e-08, 0, 0.560818, 0 )
shape = SubResource( 1 )

[connection signal="joystick_movement" from="PlayerContainer/ARVROrigin/LeftController" to="." method="_on_LeftController_joystick_movement"]
[connection signal="joystick_movement" from="PlayerContainer/ARVROrigin/RightController" to="." method="_on_RightController_joystick_movement"]
